--- a/.github/workflows/rebuild-pages.yml
+++ b/.github/workflows/rebuild-pages.yml
@@ -16,4 +16,4 @@ jobs:
           --url https://api.github.com/repos/${{ github.repository }}/pages/builds \
           --header "Authorization: Bearer $GITHUB_TOKEN"
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.USER_TOKEN }}
